--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     	
     	<div class="BlueLineInHeadbelow">
     			<div class="call"><i class="fa fa-phone"></i> CALL US: +1234567890</div>
-    			<div class="locate"><i class="fa fa-phone"></i> LOCATE DEALERS</div>
-    			<div class="product"><i class="fa fa-phone"></i> OUR PRODUCTS</div>
+    			<div class="locate"><i class="fa fa-map-marker"></i> LOCATE DEALERS</div>
+    			<div class="product"><i class="fa fa-shopping-cart"></i> OUR PRODUCTS</div>
     	</div>
     	
     </div> <!-- HeadBang -->
